--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- banner section -->
 
-        <section class="bg-[#12174e] relative mb-52">
+        <section class="bg-[#12174e] relative mb-20 md:mb-32 lg:mb-52">
              <div class="container px-8 lg:px-32 py-12 md:py-18 lg:py-20 mx-auto text-white text-center space-y-6">
                   <h1 class="text-3xl lg:text-5xl font-bold">Creative way to <br> Showcase your <span class="text-[#ef4444]">App</span></h1>
                   <p class="opacity-80 text-sm">Your app gets minimum attention and gets more and more downloads.</p>
@@ -79,14 +79,14 @@
         <!-- card section -->
 
         <section class="container px-8 md:px-20 lg:px-32 mx-auto mb-24">
-            <h1 class="font-bold text-5xl text-center opacity-80">What you can do</h1>
-            <p class="w-1/2 text-center mx-auto opacity-60 text-sm mt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad consectetur adipisci aliquid ducimus error voluptas dignissimos aperiam voluptatum impedit maiores in ipsum, accusantium tempore!</p>
+            <h1 class="font-bold text-3xl lg:text-5xl text-center opacity-80">What you can do</h1>
+            <p class="lg:w-1/2 text-center mx-auto opacity-60 text-sm mt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad consectetur adipisci aliquid ducimus error voluptas dignissimos aperiam voluptatum impedit maiores in ipsum, accusantium tempore!</p>
 
-              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-6 md:gap-4">
 
                 <!-- first card -->
                  
-                   <div class="text-center space-y-2 shadow-2xl mt-24 p-8">
+                   <div class="text-center space-y-2 shadow-2xl mt-16 lg:mt-24 p-8">
                        <img class="bg-[#4ade80] m-auto p-4 rounded-full mb-3" src="assets/play-store.png">
                        <h3 class="font-semibold opacity-80">Easy To use</h3>
                        <p class="opacity-60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illo.</p>
@@ -95,7 +95,7 @@
 
                 <!-- second card -->
 
-                   <div class="text-center space-y-2 shadow-2xl mt-24 p-8">
+                   <div class="text-center space-y-2 shadow-2xl mt-10 lg:mt-24 p-8">
                        <img class="bg-[#facc15] m-auto p-4 rounded-full mb-3" src="assets/play-store.png">
                        <h3 class="font-semibold opacity-80">Easy To use</h3>
                        <p class="opacity-60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illo.</p>
@@ -104,7 +104,7 @@
 
                 <!-- third card -->
 
-                   <div class="text-center space-y-2 shadow-2xl mt-24 p-8">
+                   <div class="text-center space-y-2 shadow-2xl mt-10 lg:mt-24 p-8">
                        <img class="bg-[#60a5fa] m-auto p-4 rounded-full mb-3" src="assets/play-store.png">
                        <h3 class="font-semibold opacity-80">Easy To use</h3>
                        <p class="opacity-60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illo.</p>
@@ -113,7 +113,7 @@
 
                 <!-- fourth card -->
 
-                   <div class="text-center space-y-2 shadow-2xl mt-24 p-8">
+                   <div class="text-center space-y-2 shadow-2xl mt-10 lg:mt-24 p-8">
                        <img class="bg-[#f87171] m-auto p-4 rounded-full mb-3" src="assets/play-store.png">
                        <h3 class="font-semibold opacity-80">Easy To use</h3>
                        <p class="opacity-60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, illo.</p>
